Fix haml-lint InstanceVariables issues
Pass in locals instead of using instance variables in partials to pass haml-lint

--- a/app/views/cookies/new.html.haml
+++ b/app/views/cookies/new.html.haml
@@ -27,4 +27,4 @@
 
   %p.govuk-body= t('cookie_settings.section_settings.paragraph_two_no_js')
 
-= render(partial: 'form')
+= render(partial: 'form', locals: { cookie: @cookie })
