--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,7 +27,7 @@
     %a.govuk-skip-link{ href: "#main-content","data-module":"govuk-skip-link" }
       = t('layouts.application.skip_content')
 
-    = render partial: 'layouts/cookie_banner/main'
+    = render partial: 'layouts/cookie_banner/main', locals: { cookies_preferences_set: @cookies_preferences_set }
 
     %header.govuk-header{ "data-module" => "govuk-header", role: "banner" }
       .govuk-header__container.govuk-width-container
