--- a/app/views/layouts/cookie_banner/_main.html.haml
+++ b/app/views/layouts/cookie_banner/_main.html.haml
@@ -1,4 +1,4 @@
-- unless @cookies_preferences_set
+- unless cookies_preferences_set
   %turbo-frame#removable
     .app-cookie-banner.govuk-cookie-banner{ 'aria-label': 'Cookies on View Court Data', id: "removable", role: 'region', data: { module: 'app-cookie-banner', nosnippet: ''} }
       .govuk-cookie-banner__message.govuk-width-container
