--- a/app/views/searches/_results.html.haml
+++ b/app/views/searches/_results.html.haml
@@ -2,7 +2,7 @@
 
 - if results.empty?
   = render 'results/none'
-- elsif @results.first.is_a? CourtDataAdaptor::Resource::ProsecutionCase
-  = render 'results/prosecution_case'
+- elsif results.first.is_a? CourtDataAdaptor::Resource::ProsecutionCase
+  = render partial: 'results/prosecution_case', locals: { results: results }
 - else
-  = render 'results/defendant'
+  = render partial: 'results/defendant', locals: { cookies_preferences_set: cookies_preferences_set, results: results }
