Remove webpacker for JsBundler

--- a/app/views/defendants/edit.html.haml
+++ b/app/views/defendants/edit.html.haml
@@ -3,7 +3,7 @@
 .govuk-grid-row
   .govuk-grid-column-two-thirds
     - content_for :custom_packs do
-      = javascript_pack_tag 'unlink', defer: true
+      = javascript_include_tag 'unlink', defer: true
 
     = render partial: 'form', locals: { defendant: @defendant,
                                         unlink_attempt: @unlink_attempt,
