--- a/app/views/layouts/_govuk_logo.html.haml
+++ b/app/views/layouts/_govuk_logo.html.haml
@@ -2,6 +2,6 @@
   %span.govuk-header__logotype
     %svg.govuk-header__logotype-crown{ focusable: "false", height: "30", "aria-hidden": "true", viewbox: "0 0 132 97", width: "36", xmlns: "http://www.w3.org/2000/svg" }
       %path{ d: t('layouts.application.header.navigation.svg_logo'), fill: "currentColor", "fill-rule" => "evenodd" }
-      %image.govuk-header__logotype-crown-fallback-image{ height: "32", src: asset_pack_path("media/images/govuk-logotype-crown.png"), width: "36", "xlink:href" => "" }
+      %image.govuk-header__logotype-crown-fallback-image{ height: "32", src: asset_path("govuk-logotype-crown.png"), width: "36", "xlink:href" => "" }
     %span.govuk-header__logotype-text
       GOV.UK
