--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,21 +5,21 @@
       = content_for?(:page_title) ? yield(:page_title) : service_name
 
     %meta{ charset: "utf-8" }/
-    = stylesheet_pack_tag 'application', media: 'all'
-    = javascript_pack_tag 'application', defer: true
+    = stylesheet_link_tag 'application', media: 'all'
+    = javascript_include_tag 'application', defer: true
     = csrf_meta_tags
-    = javascript_pack_tag 'govuk-frontend'
+    = javascript_include_tag 'govuk_frontend'
 
     %meta{ content: "width=device-width, initial-scale=1, viewport-fit=cover", name: "viewport" }/
     %meta{ content: "blue", name: "theme-color" }/
     %meta{ content: "IE=edge", "http-equiv" => "X-UA-Compatible" }/
-    %link{ href: asset_pack_path("media/images/favicon.ico"), rel: "shortcut icon", sizes: "16x16 32x32 48x48", type: "image/x-icon" }/
-    %link{ color: "blue", href: "/images/govuk-mask-icon.svg", rel: "mask-icon" }/
-    %link{ href: asset_pack_path("media/images/govuk-apple-touch-icon-180x180.png"), rel: "apple-touch-icon", sizes: "180x180" }/
-    %link{ href: asset_pack_path("media/images/govuk-apple-touch-icon-167x167.png"), rel: "apple-touch-icon", sizes: "167x167" }/
-    %link{ href: asset_pack_path("media/images/govuk-apple-touch-icon-152x152.png"), rel: "apple-touch-icon", sizes: "152x152" }/
-    %link{ href: asset_pack_path("media/images/govuk-apple-touch-icon.png"), rel: "apple-touch-icon" }/
-    = tag :meta, property: 'og:image', content: asset_pack_path('media/images/govuk-opengraph-image.png')
+    %link{ href: asset_path("favicon.ico"), rel: "shortcut icon", sizes: "16x16 32x32 48x48", type: "image/x-icon" }/
+    %link{ color: "blue", href: "govuk-mask-icon.svg", rel: "mask-icon" }/
+    %link{ href: asset_path("govuk-apple-touch-icon-180x180.png"), rel: "apple-touch-icon", sizes: "180x180" }/
+    %link{ href: asset_path("govuk-apple-touch-icon-167x167.png"), rel: "apple-touch-icon", sizes: "167x167" }/
+    %link{ href: asset_path("govuk-apple-touch-icon-152x152.png"), rel: "apple-touch-icon", sizes: "152x152" }/
+    %link{ href: asset_path("govuk-apple-touch-icon.png"), rel: "apple-touch-icon" }/
+    = tag :meta, property: 'og:image', content: asset_path('govuk-opengraph-image.png')
     = render partial: 'layouts/google_analytics'
   %body.govuk-template__body{ class: app_environment }
     :javascript
