Add split around defendants v2

--- a/app/views/laa_references/_form.html.haml
+++ b/app/views/laa_references/_form.html.haml
@@ -4,7 +4,7 @@
   = render partial: 'defendants/defendant', locals: { defendant: defendant,
                                                       prosecution_case_reference: prosecution_case_reference }
 
-  - if Feature.enabled?(:defendants_page)
+  - if SplitFlag.on?(current_user.email, :defendant_v2_page)
     = render partial: 'defendants/offences_v2', locals: { defendant: defendant }
   - else
     = render partial: 'defendants/offences', locals: { defendant: defendant }
